--- a/02-Margin-a-padding/06-Priklad/style.css
+++ b/02-Margin-a-padding/06-Priklad/style.css
@@ -1,7 +1,27 @@
+html {box-sizing: border-box;}
+*, ::before, ::after {box-sizing: inherit;}
+
 body {
 	font-family: sans-serif;
 	font-size: 18px;
 	line-height: 1.5;
+	margin: 0;
+}
+/* -------------------------------- */
+
+.box{
+	width: 600px;
+	background: rgb(107, 107, 240);
+	border: 8px solid black;
+	margin: 0 auto;
+	margin-top: 50px;
+	padding: 30px;
 }
 
-/* -------------------------------- */
+h1{
+	margin:0;
+}
+p{
+	margin-top: 20px;
+	margin-bottom: 0;
+}
