--- a/04-Position/03-Kocici-domecek/style.css
+++ b/04-Position/03-Kocici-domecek/style.css
@@ -24,7 +24,7 @@ h1 {
 		pak mohla pozicovat kočky v rámci domečku
 		a ne celé stránky
 	*/
-
+	position:relative;
 
 }
 
@@ -35,7 +35,9 @@ h1 {
 		kočka si svoje zamilované dopisy
 		nejraději čte v levém dolním rohu domečku
 	*/
-
+	position:absolute;
+	left: 0;
+	bottom: 0;
 }
 
 .motyl {
@@ -46,9 +48,12 @@ h1 {
 		uprostřed domečku, protože tam má na
 		dovádění nejvíc místa
 	*/
+	position: absolute;
+	left: 260px;
+	bottom: 136px;
+	/* skutečná vel. boxu je 690 px, a 390 px 5 px je ráměček */
 
 }
-
 .kniha {
 	width: 120px;
 	height: 140px;
@@ -59,6 +64,9 @@ h1 {
 		nebyl její levý horní roh, ale její střed
 		(tj. vyčuhuje z domečku ven)
 	*/
+	position: absolute;
+	right: 630px;
+	bottom: 320px;
 
 }
 
@@ -72,6 +80,9 @@ h1 {
 		domečku a 30 px od horní hrany domečku - potřebuje
 		totiž na svůj tanec trochu prostoru
 	*/
+	position: absolute;
+	right: 30px;
+	top: 30px;
 
 }
 
@@ -82,5 +93,7 @@ h1 {
 		kočka s myší je unavená, a proto chce jít
 		spát do pravého dolního rohu domečku
 	*/
-
+	position: absolute;
+	right: 0;
+	bottom: 0;
 }
